# rssnotify

./: .gitignore  README.rst  pyproject.toml
