[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rssnotify"
version = "0.1.1"
authors = [{ name = "jamazi", email = "jamazi@tutanota.com" }]
description = "Simple RSS notify utility."
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["rss", "notify"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["feedparser==6.0.10", "pydantic[dotenv]==1.10.7"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
rss-notify = "rssnotify.rss_notify:parse_all"

[project.urls]
"Homepage" = "https://github.com/jamazi/rssnotify"
"Bug Tracker" = "https://github.com/jamazi/rssnotify/issues"

[project.optional-dependencies]
dev = ["black", "isort", "mypy>=0.910", "pylint", "pytest"]

[tool.mypy]
python_version = "3.10"
warn_unreachable = true
warn_unused_ignores = true
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pylint]
max-line-length = 79
disable = [
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
  "import-outside-toplevel",
  "invalid-name",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
